--- a/functions/package.json
+++ b/functions/package.json
@@ -1,24 +1,28 @@
 {
   "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "tslint --project tsconfig.json",
-    "build": "tsc",
-    "serve": "npm run build && firebase serve --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "lint": "eslint .",
+    "serve": "firebase serve --only functions",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "main": "lib/index.js",
+  "engines": {
+    "node": "8"
+  },
   "dependencies": {
-    "actions-on-google": "^2.6.0",
+    "actions-on-google": "^2.8.0",
+    "dialogflow": "^0.10.2",
     "dialogflow-fulfillment": "^0.6.1",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^3.0.0"
   },
   "devDependencies": {
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "eslint": "^5.12.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "firebase-functions-test": "^0.1.6"
   },
   "private": true
 }
